--- a/src/front/views/login/view-login.ejs
+++ b/src/front/views/login/view-login.ejs
@@ -10,22 +10,60 @@
 <body>
 
     <div id="viewLogin">
-        <h1>Login</h1>
 
-        <form v-on:submit="login">
+        <div class="bg">
 
-            <input type="text"
-                   v-model="form.email.value"
-                   :required="form.email.required">
-            <br>
+            <div class="container login">
+                <div class="row content">
+                    <div class="col-md-3">
+                        <div class="box">
 
-            <input type="password"
-                   v-model="form.password.value"
-                   :required="form.password.required">
-            <br>
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="logo">
+                                        <img src="/images/logo.svg"
+                                             alt="Logo">
+                                    </div>
+                                </div>
+                            </div>
 
-            <button type="submit">Login</button>
-        </form>
+                            <form v-on:submit="login">
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="input">
+                                            <img src="/images/username-logo.svg">
+                                            <input type="email"
+                                                   placeholder="Email"
+                                                   v-model="form.email.value"
+                                                   :required="form.email.required">
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="input">
+                                            <img src="/images/password-logo.svg">
+                                            <input type="password"
+                                                   placeholder="Password"
+                                                   v-model="form.password.value"
+                                                   :required="form.password.required">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <button type="submit"
+                                                class="btn btn-light">Login</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <?- include('../common/scripts')?>
