--- a/src/front/scss/export/main.scss
+++ b/src/front/scss/export/main.scss
@@ -3,6 +3,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap");
 
+@import "./toast.scss";
+@import "./loader.scss";
+
 body {
     font-family: "Ubuntu", sans-serif !important;
 }
@@ -10,3 +13,36 @@ body {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.btn {
+    border-radius: 32px;
+    padding: 0 12px;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+::selection {
+    color: #fff;
+    background: var(--bs-primary);
+    text-shadow: none;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
