--- a/src/front/scss/export/view-login.scss
+++ b/src/front/scss/export/view-login.scss
@@ -32,13 +32,17 @@
                 gap: 10px;
                 align-items: center;
 
+                img {
+                    width: 16px;
+                }
+
                 input {
                     width: 100%;
                     padding: 5px 5px;
                     color: var(--green-600);
                     display: inline-block;
                     outline: none;
-                    font-size: 1.25rem;
+                    font-size: 12px;
                     font-weight: 500;
                     border: 0;
                     border-bottom: 1px solid #5b6377;
@@ -47,11 +51,28 @@
                 }
             }
 
-            .btn {
-                border-radius: 32px;
-                padding: 0 12px;
-                font-weight: bold;
-                font-size: 14px;
+            .buttons {
+                margin-top: 32px;
+                display: flex;
+                justify-content: space-between;
+
+                .signup {
+                    background: transparent;
+                    border: navajowhite;
+                    color: #fff;
+                }
+            }
+
+            .forgot-password {
+                display: flex;
+                justify-content: right;
+                margin-top: 4px;
+
+                a {
+                    color: #787878;
+                    text-decoration: none;
+                    font-size: 12px;
+                }
             }
         }
     }
