--- a/src/front/views/common/head.ejs
+++ b/src/front/views/common/head.ejs
@@ -1,4 +1,4 @@
-<? const pageTitle = title.toLowerCase() != 'iwf auth' ? `${title} | IWF Auth` : title; ?>
+<? const pageTitle = title.toLowerCase() != 'jade dragon auth' ? `${title} | Jade Dragon Auth` : title; ?>
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -6,9 +6,9 @@
       content="width=device-width, initial-scale=1">
 
 <!-- Fav icon -->
-<!-- <link rel="shortcut icon"
-      type="image/svg"
-      href="/images/logo-favicon.svg" /> -->
+<link rel="shortcut icon"
+      type="image/x-icon"
+      href="/favicon.ico" />
 
 <title>
       <?= pageTitle ?>
