--- a/src/front/views/index/view-index.ejs
+++ b/src/front/views/index/view-index.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <?- include('../common/head', { title: 'IWF Auth' }) ?>
+    <?- include('../common/head', { title: 'Jade Dragon Auth' }) ?>
 
     <link rel="stylesheet"
           href="/css/view-index.css">
