feat: forgot password; send email forgot password

--- a/src/front/scss/export/view-forgot-password.scss
+++ b/src/front/scss/export/view-forgot-password.scss
@@ -3,7 +3,7 @@
     background-color: var(--blue-700);
 }
 
-.signup {
+.forgot-password {
     .content {
         height: 100% !important;
         justify-content: center !important;
@@ -19,7 +19,7 @@
             }
         }
 
-        .signup-title {
+        .forgot-password-title {
             color: #fff;
             display: flex;
             align-items: center;
@@ -33,6 +33,12 @@
             span {
                 font-size: 18px;
             }
+        }
+
+        .forgot-password-description {
+            color: #fff;
+            font-size: 12px;
+            padding: 12px 0;
         }
 
         .box {
@@ -60,32 +66,6 @@
                     border-bottom: 1px solid #5b6377;
                     background-color: transparent;
                     border-radius: 0;
-                }
-            }
-
-            .show-password {
-                display: flex;
-                align-items: center;
-                gap: 4px;
-                padding: 0;
-                margin-top: 2px;
-
-                input {
-                    margin: 0;
-                }
-
-                label {
-                    color: #7a7a7a;
-                    font-size: 12px;
-                }
-
-                :checked {
-                    background-color: var(--green-600);
-                    border-color: var(--green-600);
-                }
-
-                :focus {
-                    box-shadow: none;
                 }
             }
 
