--- a/src/front/views/forgot-password/view-forgot-password.ejs
+++ b/src/front/views/forgot-password/view-forgot-password.ejs
@@ -1,19 +1,19 @@
 <html>
 
 <head>
-    <?- include('../common/head', { title: 'Signup' }) ?>
+    <?- include('../common/head', { title: 'Forgot Password' }) ?>
 
     <link rel="stylesheet"
-          href="/css/view-signup.css">
+          href="/css/view-forgot-password.css">
 </head>
 
 <body>
 
-    <div id="viewSignup">
+    <div id="viewForgotPassword">
 
         <div class="bg">
 
-            <div class="container signup">
+            <div class="container forgot-password">
                 <div class="row content">
                     <div class="col-md-3">
                         <div class="box">
@@ -29,29 +29,30 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="signup-title">
+                                    <div class="forgot-password-title">
                                         <a href="/login">
                                             <i class="fas fa-arrow-left"></i>
                                         </a>
-                                        <span>Signup</span>
+                                        <span>Forgot Password</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <form v-on:submit="signup">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="forgot-password-description">
+                                        If your email is registered, we will send you an email with a link to reset your
+                                        password. Please check your email.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <form v-on:submit="sendValidation">
 
                                 <div class="row">
 
                                     <div class="col-12">
-                                        <div class="input">
-                                            <input type="text"
-                                                   placeholder="Name"
-                                                   v-model="form.name.value"
-                                                   :required="form.name.required">
-                                        </div>
-                                    </div>
 
-                                    <div class="col-12">
                                         <div class="input">
                                             <input type="email"
                                                    placeholder="Email"
@@ -60,31 +61,12 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-12">
-                                        <div class="input">
-                                            <input :type="form.password.show ? 'text' : 'password'"
-                                                   placeholder="Password"
-                                                   v-model="form.password.value"
-                                                   :required="form.password.required">
-                                        </div>
-                                        <div class="form-check show-password">
-                                            <input class="form-check-input"
-                                                   type="checkbox"
-                                                   id="showPasswordCheck"
-                                                   v-on:change="showPassword">
-                                            <label class="form-check-label"
-                                                   for="showPasswordCheck">
-                                                Show password
-                                            </label>
-                                        </div>
-                                    </div>
-
                                 </div>
 
                                 <div class="row">
                                     <div class="col-12 buttons">
                                         <button type="submit"
-                                                class="btn btn-light">Signup</button>
+                                                class="btn btn-light">Send</button>
                                     </div>
                                 </div>
                             </form>
@@ -114,33 +96,27 @@
         const Router = createRouter();
 
         const viewLogin = new Vue({
-            el: '#viewSignup',
+            el: '#viewForgotPassword',
 
             data: {
                 form: {
-                    name: { value: null, required: true },
-                    email: { value: null, required: true },
-                    password: { value: null, required: true, show: false }
+                    email: { value: null, required: true }
                 }
             },
 
             methods: {
-                signup(e) {
+                sendValidation(e) {
                     e.preventDefault();
 
                     Loader.open();
-                    HttpClient.post('/api/auth/register', {
-                        name: this.form.name.value,
-                        email: this.form.email.value,
-                        password: this.form.password.value
+                    HttpClient.post('/api/auth/forgot-password', {
+                        email: this.form.email.value
                     }).then(response => {
                         Loader.dismiss();
 
-                        AppStorage.getData().user = response.data.user;
-                        AppStorage.getData().token = response.data.token;
-                        AppStorage.saveData()
+                        Toast.show('We have sent you an email with a link to reset your password.');
 
-                        Router.navigate('/');
+                        setTimeout(() => Router.navigate('/'), 2000);
                     }).catch(error => {
                         Loader.dismiss();
                         Toast.showHttpError(error);
