reset-password, login error message

--- a/src/front/assets/css/bootstrap.css
+++ b/src/front/assets/css/bootstrap.css
@@ -1,4 +1,4 @@
-:root{--blue-800: #12192e;--blue-700: #111c37;--blue-600: #182341;--blue-500: #1a2545;--green-600: #00a86b;--white-800: #faebd7}/*!
+:root{--blue-800: #12192e;--blue-700: #111c37;--blue-600: #182341;--blue-500: #1a2545;--green-600: #00a86b;--white-800: #faebd7;--red-700: #af1a1a}/*!
  * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
