--- a/src/front/scss/export/view-index.scss
+++ b/src/front/scss/export/view-index.scss
@@ -1,6 +1,7 @@
 .bg {
     background-image: url("/images/background.png");
     background-color: var(--blue-700);
+    height: 100%;
 }
 
 .content {
