--- a/src/front/scss/export/view-reset-password.scss
+++ b/src/front/scss/export/view-reset-password.scss
@@ -1,9 +1,10 @@
 .bg {
     background-image: url("/images/background.png");
     background-color: var(--blue-700);
+    height: 100%;
 }
 
-.login {
+.reset-password {
     .content {
         height: 100% !important;
         justify-content: center !important;
@@ -19,6 +20,22 @@
             }
         }
 
+        .reset-password-title {
+            color: #fff;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            a {
+                color: #fff;
+                font-size: 12px;
+            }
+
+            span {
+                font-size: 18px;
+            }
+        }
+
         .box {
             background: var(--bs-primary);
             background: linear-gradient(0deg, var(--blue-800) 0%, var(--blue-500) 100%);
@@ -27,23 +44,10 @@
             box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.25);
             border-bottom: 1px solid var(--green-600);
 
-            .error {
-                background-color: var(--red-700);
-                border-radius: 6px;
-                padding: 2px 6px;
-                color: #fff;
-                font-size: 12px;
-                margin-bottom: 12px;
-            }
-
             .input {
                 display: flex;
                 gap: 10px;
                 align-items: center;
-
-                img {
-                    width: 16px;
-                }
 
                 input {
                     width: 100%;
@@ -60,28 +64,36 @@
                 }
             }
 
+            .show-password {
+                display: flex;
+                align-items: center;
+                gap: 4px;
+                padding: 0;
+                margin-top: 2px;
+
+                input {
+                    margin: 0;
+                }
+
+                label {
+                    color: #7a7a7a;
+                    font-size: 12px;
+                }
+
+                :checked {
+                    background-color: var(--green-600);
+                    border-color: var(--green-600);
+                }
+
+                :focus {
+                    box-shadow: none;
+                }
+            }
+
             .buttons {
                 margin-top: 32px;
                 display: flex;
                 justify-content: space-between;
-
-                .signup {
-                    background: transparent;
-                    border: navajowhite;
-                    color: #fff;
-                }
-            }
-
-            .forgot-password {
-                display: flex;
-                justify-content: right;
-                margin-top: 4px;
-
-                a {
-                    color: #787878;
-                    text-decoration: none;
-                    font-size: 12px;
-                }
             }
         }
     }
