--- a/src/front/views/reset-password/view-reset-password.ejs
+++ b/src/front/views/reset-password/view-reset-password.ejs
@@ -1,21 +1,22 @@
 <html>
 
 <head>
-    <?- include('../common/head', { title: 'Login' }) ?>
+    <?- include('../common/head', { title: 'Reset Password' }) ?>
 
     <link rel="stylesheet"
-          href="/css/view-login.css">
+          href="/css/view-reset-password.css">
 </head>
 
 <body>
 
-    <div id="viewLogin">
+    <div id="viewResetPassword">
 
         <div class="bg">
 
-            <div class="container login">
+            <div class="container reset-password">
+
                 <div class="row content">
-                    <div class="col-lg-4 col-md-5 col-sm-6">
+                    <div class="col-md-3">
                         <div class="box">
 
                             <div class="row">
@@ -27,46 +28,46 @@
                                 </div>
                             </div>
 
-                            <div class="row"
-                                 v-if="error">
+                            <div class="row">
                                 <div class="col-12">
-                                    <div class="error">❌ {{ error }}</div>
+                                    <div class="reset-password-title">
+                                        <a href="/login">
+                                            <i class="fas fa-arrow-left"></i>
+                                        </a>
+                                        <span>Reset Password</span>
+                                    </div>
                                 </div>
                             </div>
 
-                            <form v-on:submit="login">
+                            <form v-on:submit="save">
 
                                 <div class="row">
+
                                     <div class="col-12">
                                         <div class="input">
-                                            <img src="/images/username-logo.svg">
-                                            <input type="email"
-                                                   placeholder="Email"
-                                                   v-model="form.email.value"
-                                                   :required="form.email.required">
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="input">
-                                            <img src="/images/password-logo.svg">
-                                            <input type="password"
-                                                   placeholder="Password"
+                                            <input :type="form.password.show ? 'text' : 'password'"
+                                                   placeholder="New password"
                                                    v-model="form.password.value"
                                                    :required="form.password.required">
                                         </div>
+                                        <div class="form-check show-password">
+                                            <input class="form-check-input"
+                                                   type="checkbox"
+                                                   id="showPasswordCheck"
+                                                   v-on:change="showPassword">
+                                            <label class="form-check-label"
+                                                   for="showPasswordCheck">
+                                                Show password
+                                            </label>
+                                        </div>
                                     </div>
-                                    <div class="col-12 forgot-password">
-                                        <a href="/forgot-password">Forgot password?</a>
-                                    </div>
+
                                 </div>
 
                                 <div class="row">
                                     <div class="col-12 buttons">
                                         <button type="submit"
-                                                class="btn btn-light">Login</button>
-
-                                        <a href="/signup"
-                                           class="btn btn-light signup">Signup</a>
+                                                class="btn btn-light">Save</button>
                                     </div>
                                 </div>
                             </form>
@@ -96,41 +97,32 @@
         const Router = createRouter();
 
         const viewLogin = new Vue({
-            el: '#viewLogin',
+            el: '#viewResetPassword',
 
             data: {
-                error: null,
                 form: {
-                    email: { value: null, required: true },
-                    password: { value: null, required: true }
+                    password: { value: null, required: true, show: false }
                 }
             },
 
-            created() {
-                this.error = Router.getUrlParam('error');
-                console.log(this.error)
-            },
-
             methods: {
-                login(e) {
+                save(e) {
                     e.preventDefault();
 
                     Loader.open();
-                    HttpClient.post('/api/auth/login', {
-                        email: this.form.email.value,
+                    HttpClient.post('/api/auth/reset-password', {
                         password: this.form.password.value
-                    }).then(response => {
+                    }, { token: Router.getUrlParam('token') }).then(response => {
                         Loader.dismiss();
-
-                        AppStorage.getData().user = response.data.user;
-                        AppStorage.getData().token = response.data.token;
-                        AppStorage.saveData()
-
-                        Router.navigate('/');
+                        Router.navigate('/login');
                     }).catch(error => {
                         Loader.dismiss();
                         Toast.showHttpError(error);
                     });
+                },
+
+                showPassword(event) {
+                    this.form.password.show = event.target.checked;
                 }
             }
         });
