--- a/src/front/views/forgot-password/view-forgot-password.ejs
+++ b/src/front/views/forgot-password/view-forgot-password.ejs
@@ -116,7 +116,7 @@
 
                         Toast.show('We have sent you an email with a link to reset your password.');
 
-                        setTimeout(() => Router.navigate('/'), 2000);
+                        setTimeout(() => Router.navigate('/login'), 2000);
                     }).catch(error => {
                         Loader.dismiss();
                         Toast.showHttpError(error);
