--- a/src/front/views/index/view-index.ejs
+++ b/src/front/views/index/view-index.ejs
@@ -26,7 +26,7 @@
 
                 <div class="logout">
                     <button class="btn btn-light"
-                            v-on:click="logout">Logout</button>
+                            v-on:click="logout()">Logout</button>
                 </div>
             </div>
 
@@ -70,14 +70,14 @@
                 }).catch(error => {
                     Loader.dismiss();
                     Toast.showHttpError(error);
-                    setTimeout(() => this.logout(), 2000);
+                    setTimeout(() => this.logout('You must be logged in to access'), 2000);
                 });
             },
 
             methods: {
-                logout() {
+                logout(error) {
                     AppStorage.clearData();
-                    Router.navigate('/login');
+                    Router.navigate(`/login${error ? '?error=' + error : ''}`);
                 },
 
                 getLoggedUser() {
